internal/dataplane/testdata/golden/httproute-example/in.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: httpbin
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-testing
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
spec:
  parentRefs:
    - name: kong
  rules:
    - name: httproute-testing
      matches:
        - path:
            type: PathPrefix
            value: /httproute-testing
      backendRefs:
        - name: httpbin
          kind: Service
          port: 80
          weight: 75
        - name: nginx
          kind: Service
          port: 8080
          weight: 25
    - name: echo
      matches:
        - path:
            type: PathPrefix
            value: /echo
      backendRefs:
        - name: httpbin
          kind: Service
          port: 80
    - name: content
      matches:
        - path:
            type: PathPrefix
            value: /content
      backendRefs:
        - name: httpbin
          kind: Service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /nginx
      backendRefs:
        - name: nginx
          kind: Service
          port: 8080
